# ChangeLog for virtual/xmwce
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*xmwce-0_p20120218 (18 Feb 2012)

  18 Feb 2012; Michael Weber <xmw@gentoo.org> -xmwce-0_p20120214.ebuild,
  +xmwce-0_p20120218.ebuild:
  Add app-misc/when.

  14 Feb 2012; Michael Weber <xmw@gentoo.org> xmwce-0_p20120214.ebuild:
  Add app-vim/gnupg

*xmwce-0_p20120214 (14 Feb 2012)

  14 Feb 2012; Michael Weber <xmw@gentoo.org> +xmwce-0_p20120214.ebuild,
  +metadata.xml:
  Initial import
