@@ -1,13 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-EBUILD xmwce-0_p20120218.ebuild 885 RMD160 98175feb4db908ddfabb4fbd6668603d9d87438e SHA1 dd1b8986efda33a5b06b126604f54be94ecaaf24 SHA256 b7c7332bc640e421d10eaec781d9136e659ff0c5f5801382de5a7ce084ef61c1
-MISC ChangeLog 507 RMD160 9147aee617d163e5d6c01b54ea5524e03ea40d40 SHA1 05292b7b1db72f43caf905187b8b2bd41cbdf092 SHA256 1e5dfc855fc55e9e0cd715a0b1dd7da247f0c9977747c94847b9f848c996d8bf
-MISC metadata.xml 224 RMD160 2a7e22a99ec669c5b961c3d1738a0cda58264318 SHA1 f6fd81fac4df7d7995b1600848b265fceda692f8 SHA256 f810c6de744adceee241992d3f713142db3e7025986f6cc5898cfe3c9cb2f4a7
+EBUILD xmwce-0_p20120218.ebuild 884 RMD160 dacca305332c26f8b846114a011b75368d6cb8ca SHA1 fbf4b609ea19e3ecd3655e3caaf0570110c45cfe SHA256 dbd20712a37acbc0bc1112ebb58dd2773684e140ff891efcee2f67b5f6e98163
+EBUILD xmwce-0_p20120505.ebuild 989 RMD160 6ce131c31e4de63c95f1e8ef4fafba0652970ec2 SHA1 1295676f9c0d92df14b348068045ba4f465f753a SHA256 e0864e75061ab34affc9b4821cfc7d70c50d62ed823949d3bcd5d4bd44a0d847
+MISC ChangeLog 630 RMD160 15d7a2a93767cfe27f9ea3cf099b31b19439b92d SHA1 8442d694b68c566a189f9b63d01efe8deffa983d SHA256 b991a1e5cd9e7ecd9d08ced3fa18177eee0a0121800757aa38742e3042e8efce
+MISC metadata.xml 288 RMD160 134aa4b63cba644434222f506abb17afb41e563a SHA1 2a4cdfaaa72b4e2eb671d4bf37d69e57c86b817c SHA256 9adb2d8a42cadf27c7f859bf2e2e4e1d2d745b09a35b96e50c287f0cf32eeb7d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk8+63EACgkQknrdDGLu8JBXDwD+IjBgY3pggFx2RJBX4qykd7wA
-Z9iiFsIVwiNFEaErsgoA/js0neb0JB9egj6pMn+jX9p1smOxNJZub537XJ7E9dQT
-=8Oeq
+iF4EAREIAAYFAk+lFTsACgkQknrdDGLu8JAD/gD/VtGuGnnaxdLVLLm33quA4NKE
+sq5SjOfvK1nW7PKz0vMBAJIQ61cd0GwbXz4iZL5JmQZZtZW/BE5/pb1FrGZINUEb
+=N7Yn
 -----END PGP SIGNATURE-----
