@@ -5,5 +5,8 @@
 <email>xmw@gentoo.org</email>
 <name>Michael Weber</name>
 </maintainer>
+<use>
+<flag name="dev">add gentoo developer tools</flag>
+</use>
 </pkgmetadata>
 
